# crewai-debater

./: README.md  pyproject.toml
output/: decide.md  oppose.md  propose.md
src/crewai_debater/: crew.py  main.py
