[project]
name = "crewai_debater"
version = "0.1.0"
description = "crewai-debater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
crewai_debater = "crewai_debater.main:run"
run_crew = "crewai_debater.main:run"
train = "crewai_debater.main:train"
replay = "crewai_debater.main:replay"
test = "crewai_debater.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
